# internal/models/user.go
@@ -4,19 +4,7 @@ import (
 	"go.mongodb.org/mongo-driver/bson/primitive"
 )
 
-type User struct {
-	Id       primitive.ObjectID `json:"id,omitempty"`
-	Name     string             `json:"name,omitempty" validate:"required"`
-	Location string             `json:"location,omitempty" validate:"required"`
-	Title    string             `json:"title,omitempty" validate:"required"`
-}
-
-type CreateUserBody struct {
-	Name     string `json:"name,omitempty" validate:"required"`
-	Location string `json:"location,omitempty" validate:"required"`
-	Title    string `json:"title,omitempty" validate:"required"`
-}
-
+// Represents user model
 type UserModel struct {
 	Id          primitive.ObjectID `json:"id,omitempty"`
 	Password    string             `json:"password,omitempty"`
@@ -27,20 +15,7 @@ type UserModel struct {
 	// BirthDate   time.Time `json:"birth_date,omitempty"`
 }
 
-// USER LOGIN ARGS & RESULT
-type UserLoginArgs struct {
-	Email    string `json:"email"`
-	Password string `json:"password"`
-}
-
-type UserLoginResult struct {
-	Id                  primitive.ObjectID `json:"id"`
-	UserInfos           map[string]string  `json:"user_infos"`
-	AuthenticationToken string             `json:"authentication_token"`
-	Result              Result             `json:"result"`
-}
-
-// -------------------------
+// ------------ USER REGISTER ARGS & RESULT -------------
 
 type UserRegisterArgs struct {
 	FirstName        string `json:"first_name"`
@@ -54,4 +29,34 @@ type UserRegisterArgs struct {
 
 type UserRegisterResult struct {
 	Result Result `json:"result"`
+}
+
+// ------------ USER LOGIN ARGS & RESULT -------------
+
+type UserLoginArgs struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+type UserLoginResult struct {
+	Id                  primitive.ObjectID `json:"id"`
+	UserInfos           map[string]string  `json:"user_infos"`
+	AuthenticationToken string             `json:"authentication_token"`
+	Result              Result             `json:"result"`
+}
+
+// ------------ CURRENT USER ARGS & RESULT -------------
+
+type CurrentUserModel struct {
+	Id          primitive.ObjectID `json:"id,omitempty"`
+	FirstName   string             `json:"first_name,omitempty"`
+	LastName    string             `json:"last_name,omitempty"`
+	PhoneNumber string             `json:"phone_number,omitempty"`
+	Email       string             `json:"email,omitempty"`
+}
+
+type CurrentUserResult struct {
+	CurrentUser         CurrentUserModel `json:"current_user"`
+	AuthenticationToken string           `json:"authentication_token"`
+	Result              Result           `json:"result"`
 }
